Added specific links

--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@
                 </button></a>
                 <div class="socials_toggle">
                     <ul class="socials">
-                        <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a></li>
-                        <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-xl"></i></a></li>
-                        <li><a href="https://www.whatsapp.com/" target="_blank"><i class="fa-brands fa-whatsapp fa-xl"></i></a></li>
+                        <li><a rel="noopener noreferrer" href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a></li>
+                        <li><a rel="noopener noreferrer" href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-xl"></i></a></li>
+                        <li><a rel="noopener noreferrer" href="https://www.whatsapp.com/" target="_blank"><i class="fa-brands fa-whatsapp fa-xl"></i></a></li>
                     </ul>
+                    
                     <div class="toggle_btn">
                         <i class="fa-solid fa-bars fa-fade fa-xl"></i></a>
                     </div>
@@ -76,11 +77,11 @@
 
             <div class="dropdown_toggle ">
                 <ul class="links">
-                    <li><a href="hero">Home</a></li>
-                    <li><a href="about">About Us</a></li>
-                    <li><a href="menus">Our Menus</a></li>
-                    <li><a href="reservation">Reservation</a></li>
-                    <li><a href="contact">Contact</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#about_us">About Us</a></li>
+                    <li><a href="#special_dish">Our Menus</a></li>
+                    <li><a href="#reservation_section">Reservation</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <a href="#"><button class="order_online">
                         Order Online
                     </button></a>
@@ -150,19 +151,18 @@
                 </a>
             </li>
         </ul>
-        <br><br><br><br><br><br>
+        <br><br><br>
     </section>
     </div>
 
-    
     <!-- Special Occasion Destination --> 
    <section class="occasion" id="about_us">
         <div class="container_occasion">
             <div class="occasion1 reveal shine"> 
-                    <img src="./images/event-3.jpg" alt="" width="100%" height="0">
+                    <img src="./images/event-3.jpg" alt="" width="100%">
             </div> 
             <div class="occasion2">
-                    <div class="occasion-text ">
+                    <div class="occasion-text">
                         <div class="occasion-text-1 reveal">
                             YOUR SPECIAL OCCASION DESTINATION!  
                         </div>
@@ -220,13 +220,13 @@
             <div class="copyright">
                 <div class="social-media">
                     <ul class="socials reveal">
-                        <li><a href="#"><i class="fa-brands fa-instagram fa-xl"></i></a></li>
-                        <li><a href="#"><i class="fa-brands fa-facebook fa-xl"></i></a></li>
-                        <li><a href="#"><i class="fa-brands fa-whatsapp fa-xl"></i></a></li>
+                        <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a></li>
+                        <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-xl"></i></a></li>
+                        <li><a href="https://www.whatsapp.com/" target="_blank"><i class="fa-brands fa-whatsapp fa-xl"></i></a></li>
                     </ul>
                 </div>
                 <div class="copy-right-text reveal">
-                    <a href="#">&#169;Bhavya Kapadia</a>
+                    <a target="_blank" href="https://github.com/BKAPADIA04/restaurant-web.git">&#169;Bhavya Kapadia</a>
                     <p>All Right Reserved.</p>
                     <a href="#">Privacy Policy</a>
                     <a href="#">Terms of use</a>
