--- a/contact.html
+++ b/contact.html
@@ -60,9 +60,9 @@
                 </button></a>
                 <div class="socials_toggle">
                     <ul class="socials">
-                        <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a></li>
-                        <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-xl"></i></a></li>
-                        <li><a href="https://www.whatsapp.com/" target="_blank"><i class="fa-brands fa-whatsapp fa-xl"></i></a></li>
+                        <li><a rel=" noopener noreferrer" href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a></li>
+                        <li><a rel=" noopener noreferrer" href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-xl"></i></a></li>
+                        <li><a rel=" noopener noreferrer" href="https://www.whatsapp.com/" target="_blank"><i class="fa-brands fa-whatsapp fa-xl"></i></a></li>
                     </ul>
                     <div class="toggle_btn">
                         <i class="fa-solid fa-bars fa-fade fa-xl"></i></a>
@@ -72,11 +72,11 @@
 
             <div class="dropdown_toggle ">
                 <ul class="links">
-                    <li><a href="hero">Home</a></li>
-                    <li><a href="about">About Us</a></li>
-                    <li><a href="menus">Our Menus</a></li>
-                    <li><a href="reservation">Reservation</a></li>
-                    <li><a href="contact">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">About Us</a></li>
+                    <li><a href="index.html">Our Menus</a></li>
+                    <li><a href="index.html">Reservation</a></li>
+                    <li><a href="#">Contact</a></li> 
                     <a href="#"><button class="order_online">
                         Order Online
                     </button></a>
@@ -146,7 +146,7 @@
                 </a>
             </li>
         </ul>
-        <br><br><br><br>
+        <br><br><br><br><br><br><br><br>
     </section>
     </div>
     
@@ -197,13 +197,13 @@
             <div class="copyright">
                 <div class="social-media">
                     <ul class="socials reveal">
-                        <li><a href="#"><i class="fa-brands fa-instagram fa-xl"></i></a></li>
-                        <li><a href="#"><i class="fa-brands fa-facebook fa-xl"></i></a></li>
-                        <li><a href="#"><i class="fa-brands fa-whatsapp fa-xl"></i></a></li>
+                        <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a></li>
+                        <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-xl"></i></a></li>
+                        <li><a href="https://www.whatsapp.com/" target="_blank"><i class="fa-brands fa-whatsapp fa-xl"></i></a></li>
                     </ul>
                 </div>
                 <div class="copy-right-text reveal">
-                    <a href="#">&#169;Bhavya Kapadia</a>
+                    <a target="_blank" href="https://github.com/BKAPADIA04/restaurant-web.git">&#169;Bhavya Kapadia</a>
                     <p>All Right Reserved.</p>
                     <a href="#">Privacy Policy</a>
                     <a href="#">Terms of use</a>
