--- a/contact.html
+++ b/contact.html
@@ -72,10 +72,10 @@
 
             <div class="dropdown_toggle ">
                 <ul class="links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html">About Us</a></li>
-                    <li><a href="index.html">Our Menus</a></li>
-                    <li><a href="index.html">Reservation</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./index.html">About Us</a></li>
+                    <li><a href="./index.html">Our Menus</a></li>
+                    <li><a href="./index.html">Reservation</a></li>
                     <li><a href="#">Contact</a></li> 
                     <a href="#"><button class="order_online">
                         Order Online
