--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <li><a href="#about_us">About Us</a></li>
                     <li><a href="#special_dish">Our Menus</a></li>
                     <li><a href="#reservation_section">Reservation</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                     <a href="#"><button class="order_online">
                         Order Online
                     </button></a>
