--- a/contact.html
+++ b/contact.html
@@ -219,5 +219,15 @@
 
    <!-- Custom JS -->
    <script src="index.js"></script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R4Z75ETLGE"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-R4Z75ETLGE');
+    </script>
   </body>
 </html>
